Don't use -2147483648 in test vectors.
This can trigger warnings in some compilers since 2147483648 is too
large to fit in a 32-bit signed integer, and the sign isn't part of
the constant; the constant is the large positive, then it gets
negated.

I've always thought the sign was part of the constant.  Technically
I guess it would be more correct to use -INT32_C(X) instead of
INT32_C(X), but that seems really ugly to me…

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -111,6 +111,7 @@ set(TEST_RUNNER_SOURCES
   arm/test-arm.c)
 add_executable(run-tests ${TEST_RUNNER_SOURCES})
 target_link_libraries(run-tests munit)
+target_add_compiler_flags (munit "-w")
 if(NEED_LIBM)
   target_link_libraries(run-tests m)
 endif(NEED_LIBM)
