test: build C++ tests by default
They still don't work on PGI, so I need to leave the configuration
switch in place.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,7 +7,7 @@ include (ExtraWarningFlags)
 
 enable_testing()
 
-option(BUILD_CPP_TESTS "Build C++ tests" OFF)
+option(BUILD_CPP_TESTS "Build C++ tests" ON)
 
 if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/munit/munit.c")
   find_program(GIT git)
