azure: upload to CodeCov.io

--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -13,6 +13,8 @@ jobs:
     displayName: Build
   - script: ./run-tests
     displayName: Tests
+  - script: bash <(curl -s https://codecov.io/bash)
+    displayName: 'Upload to codecov.io'
 
 - job: mipsel
   steps:
@@ -29,3 +31,5 @@ jobs:
     displayName: Build
   - script: ./dockcross-linux-mipsel ./run-tests
     displayName: Tests
+  - script: bash <(curl -s https://codecov.io/bash)
+    displayName: 'Upload to codecov.io'
