Add option to always build 'native' tests.
This is primarily to improve coverage in CI.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,7 +17,7 @@ before_build:
       cd test
       mkdir build
       cd build
-      cmake -G "$env:GENERATOR" ..
+      cmake -G "$env:GENERATOR" -DALWAYS_BUILD_NATIVE_TESTS=ON ..
 
 build_script:
   - ps: |
