--- a/.travis.yml
+++ b/.travis.yml
@@ -269,6 +269,7 @@ script:
     -G "${CMAKE_GENERATOR}" \
     -DCMAKE_BUILD_TYPE="${BUILD_TYPE}" \
     -DBUILD_CPP_TESTS=${BUILD_CPP_TESTS} \
+    -DALWAYS_BUILD_NATIVE_TESTS=ON \
     -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON \
     ${CMAKE_ARGS}
 - ${BUILD_WRAPPER} cmake --build .
