travis: add s390x build
It's allowed to fail for now since there are still a few tests which
fail, but I'm working on it.

--- a/.travis.yml
+++ b/.travis.yml
@@ -186,6 +186,9 @@ jobs:
         sources:
         - kalakris-cmake
 
+  - name: s390x
+    arch: s390x
+
   - name: amalgamate
     if: branch = master AND type != pull_request
     script:
@@ -225,8 +228,8 @@ jobs:
   #     emsdk/emsdk activate latest
   #     source emsdk/emsdk_env.sh
 
-  # - name: s390x
-  #   arch: s390x
+  allow_failures:
+  - name: s390x
 
 before_install:
 - |
