travis: fix -march flags for armv7 and armv8
Apparently the GCC installed on bionic doesn't like the '+simd'
syntax.

--- a/.travis.yml
+++ b/.travis.yml
@@ -88,7 +88,7 @@ jobs:
     env:
     - C_COMPILER=arm-linux-gnueabihf-gcc
     - CXX_COMPILER=arm-linux-gnueabihf-g++
-    - ARCH_FLAGS="-march=armv8-a+simd"
+    - ARCH_FLAGS="-march=armv8-a"
     install:
     - sudo dpkg --add-architecture armhf
     - sudo apt-get update
@@ -99,7 +99,7 @@ jobs:
     env:
     - C_COMPILER=arm-linux-gnueabihf-gcc
     - CXX_COMPILER=arm-linux-gnueabihf-g++
-    - ARCH_FLAGS="-march=armv7-a+simd"
+    - ARCH_FLAGS="-march=armv7-a"
     install:
     - sudo dpkg --add-architecture armhf
     - sudo apt-get update
