travis: add -msimd128 to emscripten build
I'm not sure if this is necessary or not.

--- a/.travis.yml
+++ b/.travis.yml
@@ -211,7 +211,7 @@ jobs:
   - name: emscripten
     compiler: emcc
     env:
-    - ARCH_FLAGS=""
+    - ARCH_FLAGS="-msimd128"
     - C_COMPILER=emcc
     - CXX_COMPILER=emcc
     - CONFIGURE_WRAPPER=emcmake
