--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -99,6 +99,7 @@ set(TEST_SOURCES_C
   x86/avx.c
   x86/avx2.c
   x86/fma.c
+  x86/svml.c
 
   arm/neon/vadd.c
   arm/neon/vdup_n.c
@@ -153,6 +154,7 @@ foreach(tst
       "/x86/avx"
       "/x86/fma"
       "/x86/avx2"
+      "/x86/svml"
     )
   add_test(NAME "${tst}/${variant}" COMMAND ${CMAKE_CROSSCOMPILING_EMULATOR} $<TARGET_FILE:run-tests> "${tst}")
 endforeach()
