--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         yml: ./.codecov.yml
-        fail_ci_if_error: true
+        fail_ci_if_error: false
 
   # emscripten:
   #   runs-on: ubuntu-latest
