--- a/.travis.yml
+++ b/.travis.yml
@@ -233,7 +233,9 @@ jobs:
     - |
       npm install jsvu -g
       jsvu --os=linux64 --engines=v8
-      
+
+  allow_failures:
+  - name: emscripten    
 
 before_install:
 - |
