--- a/.travis.yml
+++ b/.travis.yml
@@ -235,7 +235,7 @@ jobs:
       jsvu --os=linux64 --engines=v8
 
   allow_failures:
-  - name: emscripten    
+  # - name: emscripten    
 
 before_install:
 - |
