netlify: add some redirects to Compiler Explorer.
This will let us update the links from time to time.

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,15 @@
   for = "/amalgamated/x86/*.h"
   [headers.values]
     Access-Control-Allow-Origin = "*"
+
+[[redirects]]
+  from = "/godbolt/simple"
+  to = "https://godbolt.org/z/-twon_"
+  status = 302
+  force = true
+
+[[redirects]]
+  from = "/godbolt/demo"
+  to = "https://godbolt.org/z/8cAgiy"
+  status = 302
+  force = true
