--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,7 @@
 project('SIMDe', 'c', 'cpp',
-        default_options: ['c_std=c99'])
+        default_options: ['c_std=c99'],
+        license: 'MIT',
+        version: '0.5.0')
 
 cc = meson.get_compiler('c')
 cxx = meson.get_compiler('cpp')
