--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,11 +18,6 @@ jobs:
       run: cmake --build .
     - name: Test
       run: ./run-tests
-    - uses: codecov/codecov-action@v1
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        yml: ./.codecov.yml
-        fail_ci_if_error: false
 
   # emscripten:
   #   runs-on: ubuntu-latest
@@ -40,6 +35,4 @@ jobs:
   #   - name: Build
   #     run: emsdk/upstream/emscripten/emmake ninja
   #   - name: Test
-  #     run: node ./run-tests
-  #   - name: Upload Coverage Data
-  #     run: bash <(curl -s https://codecov.io/bash) -y ./.codecov.yml
+  #     run: node ./run-tests=
