Add initial AVX-512VL support

--- a/meson.build
+++ b/meson.build
@@ -18,6 +18,7 @@ install_headers(
 
 		'simde/x86/avx2.h',
 		'simde/x86/avx512bw.h',
+		'simde/x86/avx512vl.h',
 		'simde/x86/avx512f.h',
 		'simde/x86/fma.h',
 		'simde/x86/mmx.h',
