--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -100,6 +100,7 @@ set(TEST_SOURCES_C
   x86/avx2.c
   x86/avx512f.c
   x86/avx512bw.c
+  x86/avx512vl.c
   x86/fma.c
   x86/svml.c
 
@@ -158,6 +159,7 @@ foreach(tst
       "/x86/avx2"
       "/x86/avx512f"
       "/x86/avx512bw"
+      "/x86/avx512vl"
       "/x86/svml"
     )
   add_test(NAME "${tst}/${variant}" COMMAND ${CMAKE_CROSSCOMPILING_EMULATOR} $<TARGET_FILE:run-tests> "${tst}")
