--- a/meson.build
+++ b/meson.build
@@ -19,6 +19,7 @@ install_headers(
 		'simde/x86/avx2.h',
 		'simde/x86/avx512bw.h',
 		'simde/x86/avx512vl.h',
+		'simde/x86/avx512dq.h',
 		'simde/x86/avx512f.h',
 		'simde/x86/fma.h',
 		'simde/x86/mmx.h',
