--- a/meson.build
+++ b/meson.build
@@ -21,6 +21,7 @@ install_headers(
 		'simde/x86/avx512vl.h',
 		'simde/x86/avx512f.h',
 		'simde/x86/fma.h',
+		'simde/x86/gfni.h',
 		'simde/x86/mmx.h',
 		'simde/x86/sse.h',
 		'simde/x86/sse2.h',
