--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ dist: bionic
 cache: ccache
 branches:
   except:
-    - /^(wip\/)?(appveyor)(\-.+)?$/
+    - master
+    - /^(wip\/)?(appveyor|drone|gh\-actions|azure|circleci)(\-.+)?$/
 
 env:
   global:
@@ -212,7 +213,6 @@ jobs:
       local_dir: amalgamated
       github_token: $GITHUB_TOKEN
       skip_cleanup: true
-      keep_history: true
 
   - name: emscripten
     compiler: emcc
