--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,8 @@ jobs:
     - name: Tabs
       run: find simde/ -name '*.c' -o -name '*.h' -exec grep -nP '\t' {} + && exit 1 || exit 0
     # s/8/16/ will result in this if the input in x86.
-    - name: x166
-      run: git grep -i x166 && exit 1 || 0
+    - name: Bad substitutions
+      run: git grep -i 'x''1''6''6' && exit 1 || exit 0
 
   x86:
     runs-on: ubuntu-latest
