--- a/test/docker/Dockerfile.Ubuntu1804
+++ b/test/docker/Dockerfile.Ubuntu1804
@@ -5,5 +5,7 @@ COPY . /simde
 WORKDIR /simde/test
 RUN mkdir -p build_ubuntu18.04
 WORKDIR /simde/test/build_ubuntu18.04
-RUN CC=/usr/bin/gcc CXX=/usr/bin/g++ cmake -DCMAKE_C_FLAGS="-Wall -Wextra -Werror -Werror=unused-but-set-variable" -DCMAKE_CXX_FLAGS="-Wall -Wextra -Werror -Werror=unused-but-set-variable"  .. \
+RUN CC=/usr/bin/gcc CXX=/usr/bin/g++ cmake -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON \
+ -DCMAKE_C_FLAGS="-Wall -Wextra -Werror -O3" \
+ -DCMAKE_CXX_FLAGS="-Wall -Wextra -Werror -O3"  .. \
  && make -j $(nproc) && ./run-tests
